--- a/requirements.txt
+++ b/requirements.txt
@@ -34,8 +34,9 @@ mpmath==1.3.0
 networkx==3.1
 numpy==1.23.5
 oauthlib==3.2.2
-opencv-python==4.7.0.72
+opencv-contrib-python==4.7.0.72
 opt-einsum==3.3.0
+pandas==2.0.1
 Pillow==9.5.0
 progressbar2==4.2.0
 protobuf==4.22.3
@@ -43,7 +44,9 @@ pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pyparsing==3.0.9
 python-utils==3.5.2
+pytz==2023.3
 PyWavelets==1.4.1
+pywin32==305.1
 requests==2.28.2
 requests-oauthlib==1.3.1
 rsa==4.9
@@ -63,6 +66,7 @@ tifffile==2023.4.12
 torch==2.0.0
 torchvision==0.15.1
 tqdm==4.65.0
+tzdata==2023.3
 urllib3==1.26.15
 Werkzeug==2.2.3
 wrapt==1.14.1
