--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,19 @@ features/all/binary/200X/.DS_Store
 features/DS_Store
 
 features/all/binary/40X/imagelike/hog/
+models/results
+classifiers/results
+*.pdf
+*.pptx
+*/__pycache__
+*/*/__pycache__
+/data
+/notebooks/MNIST
+requirements_melika.txt
+/notebooks/CIFAR10
+environ
+/__pycache__
+__pycache__
+__pycache__\tools.cpython-38.pyc
+features\all\binary\40X\imagelike\hog\benign\
+features\all\binary\40X\imagelike\superpixels
